# cliffs

./: Cargo.toml  README.md
data/cat_states/: cat2.npy  cat3.npy  cat4.npy  cat5.npy  cat6.npy  cat7.npy
data/cat_states/2_1/: cat2_1_1_1652371407342.cliffs.npy  cat2_1_1_1652371407342_0.cliffs.qgraph  cat2_1_1_1652371407344.cliffs.npy  cat2_1_1_1652371407344_0.cliffs.qgraph  cat2_1_1_1652371407346.cliffs.npy  cat2_1_1_1652371407346_0.cliffs.qgraph  cat2_1_1_1652371407348.cliffs.npy  cat2_1_1_1652371407348_0.cliffs.qgraph  cat2_1_1_1676924751375.cliffs.npy  cat2_1_1_1676924751375_0.cliffs.tikz
data/cat_states/3_2/: cat3_1_2_1652371511442.cliffs.npy  cat3_1_2_1652371511442_0.cliffs.qgraph  cat3_1_2_1652371511442_1.cliffs.qgraph  cat3_1_2_1652371511445.cliffs.npy  cat3_1_2_1652371511445_0.cliffs.qgraph  cat3_1_2_1652371511447.cliffs.npy  cat3_1_2_1652371511447_0.cliffs.qgraph  cat3_1_2_1652371511450.cliffs.npy  cat3_1_2_1676924915550.cliffs.npy  cat3_1_2_1676924915550_0.cliffs.qasm  cat3_1_2_1676924915550_0.cliffs.tikz  cat3_1_2_1676924915550_1.cliffs.qasm  cat3_1_2_1676924915550_1.cliffs.tikz
data/cat_states/4_2/: cat4_1_2_1652371519941.cliffs.npy  cat4_1_2_1652371519941_0.cliffs.qgraph  cat4_1_2_1652371519944.cliffs.npy  cat4_1_2_1652371519944_0.cliffs.qgraph  cat4_1_2_1652371519947.cliffs.npy  cat4_1_2_1652371519947_0.cliffs.qgraph  cat4_1_2_1652371519947_1.cliffs.qgraph  (+7 more)
data/h0_box/: h0.npy
data/h_states/: h.npy
data/t_states/: t.npy
src/: clifford.rs  gslc.rs  main.rs  qr.rs  search.rs
tools/: check_circuits.py  circuit_to_npy.py
(+606 files in other folders)
